--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,30 @@ dependencies:
   # url_strategy: ^0.2.0
   universal_html: ^2.0.4
   carousel_slider: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/imgs/AS.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/imgs/AS.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/imgs/AS.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/imgs/AS.png"
 
 flutter:
   uses-material-design: true
